add_executable(solve_me_first solve_me_first.cpp)
add_executable(simple_array_sum simple_array_sum.cpp)
add_executable(compare_triplets compare_triplets.cpp)
add_executable(very_big_sum very_big_sum.cpp)
add_executable(diagonal_difference diagonal_difference.cpp)
add_executable(plus_minus plus_minus.cpp)
add_executable(staircase staircase.cpp)
add_executable(time_conversion time_conversion.cpp)
